tests/ivg/invalid/context_missing_bounds.ivg
format IVG-3
// pattern without bounds
fill pattern:[
	line 0 0 1 1
]
rect 0 0 1 1
